security/lab-01-security/manifiestos/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab-seguridad
  labels:
    purpose: training
    module: seguridad-kubernetes
