security/lab-01-security/manifiestos/app-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-demo
  namespace: lab-seguridad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-demo
  template:
    metadata:
      labels:
        app: app-demo
    spec:
      containers:
      - name: http-echo
        image: hashicorp/http-echo:1.0.0
        args:
        - "-text=lab seguridad kubernetes ok"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: app-demo
  namespace: lab-seguridad
spec:
  selector:
    app: app-demo
  ports:
  - name: http
    port: 80
    targetPort: 5678
